# crypto

./: .gitignore  Cargo.toml  README.md
contracts/: dex.nxl  governance.nxl  nft.nxl  shard_bridge.nxl  token.nxl
crates/nexara-bridge/: Cargo.toml
crates/nexara-bridge/src/: bitcoin.rs  bnb.rs  cosmos.rs  error.rs  ethereum.rs  lib.rs  nccp.rs  nullifier.rs  solana.rs
crates/nexara-consensus/: Cargo.toml
crates/nexara-consensus/src/: aibft.rs  committee.rs  dpqs.rs  error.rs  hybridsync.rs  lib.rs  slashing.rs  validator.rs  zk_finality.rs
crates/nexara-core/: Cargo.toml
crates/nexara-core/src/: block.rs  error.rs  genesis.rs  lib.rs  state.rs  transaction.rs
crates/nexara-crypto/: Cargo.toml
crates/nexara-crypto/src/: error.rs  hash.rs  kem.rs  keys.rs  lib.rs  mpc.rs  signing.rs  wallet.rs
crates/nexara-mempool/: Cargo.toml
crates/nexara-mempool/src/: error.rs  lib.rs  mempool.rs  mev_protection.rs  ordering.rs
crates/nexara-network/: Cargo.toml
crates/nexara-network/src/: discovery.rs  error.rs  gossip.rs  handshake.rs  lib.rs  p2p.rs
crates/nexara-node/: Cargo.toml
crates/nexara-node/src/: cli.rs  config.rs  main.rs  rpc.rs
crates/nexara-shard/: Cargo.toml
crates/nexara-shard/src/: assignment.rs  beacon.rs  crosslink.rs  error.rs  lib.rs  shard.rs
crates/nexara-tokenomics/: Cargo.toml
crates/nexara-tokenomics/src/: burn.rs  error.rs  lib.rs  pol.rs  staking.rs  supply.rs  vesting.rs
crates/nexlang/: Cargo.toml
crates/nexlang/src/: ast.rs  codegen.rs  errors.rs  lexer.rs  lib.rs  parser.rs  security.rs  typechecker.rs
crates/nxvm/: Cargo.toml
crates/nxvm/src/: error.rs  gas.rs  lib.rs  opcodes.rs  stack.rs  state.rs  vm.rs
docs/: architecture.md  nexlang-spec.md  whitepaper.md
scripts/: bench.sh  build.sh  test.sh
tests/nexara-integration-tests/: Cargo.toml
tests/nexara-integration-tests/benches/: bench_crypto.rs  bench_vm.rs
tests/nexara-integration-tests/src/: lib.rs
tests/nexara-integration-tests/tests/: test_consensus_lifecycle.rs  test_cross_shard.rs  test_transaction_lifecycle.rs  test_vm_execution.rs
