[workspace]
members = [
    "crates/nexara-core",
    "crates/nexara-crypto",
    "crates/nexara-consensus",
    "crates/nexara-network",
    "crates/nexara-shard",
    "crates/nexara-mempool",
    "crates/nexlang",
    "crates/nxvm",
    "crates/nexara-bridge",
    "crates/nexara-tokenomics",
    "crates/nexara-node",
    "tests/nexara-integration-tests",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
blake3 = "1.5"
sha3 = "0.10"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
hex = "0.4"
clap = { version = "4.4", features = ["derive"] }
rocksdb = "0.21"
libp2p = { version = "0.53", features = ["tcp", "noise", "yamux", "gossipsub", "mdns", "tokio", "macros"] }
criterion = "0.5"
chrono = "0.4"
dashmap = "5.5"
rayon = "1.8"
