[package]
name = "nexara-bridge"
version = "0.1.0"
edition = "2021"
description = "Native Cross-Chain Protocol (NCCP) for the NEXARA blockchain"

[dependencies]
nexara-crypto = { path = "../nexara-crypto" }
nexara-core = { path = "../nexara-core" }
serde = { workspace = true }
serde_json = { workspace = true }
blake3 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }
