[package]
name = "nexara-mempool"
version = "0.1.0"
edition = "2021"
description = "Encrypted mempool with MEV protection for the NEXARA blockchain"

[dependencies]
nexara-crypto = { path = "../nexara-crypto" }
nexara-core = { path = "../nexara-core" }
serde = { workspace = true }
blake3 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
