[package]
name = "nexara-tokenomics"
version = "0.1.0"
edition = "2021"
description = "Token economics engine for the NEXARA blockchain"

[dependencies]
nexara-crypto = { path = "../nexara-crypto" }
nexara-core = { path = "../nexara-core" }
serde = { workspace = true }
blake3 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
